<resources>
    <string name="app_name">tastifyapp</string>
    <string name="logo_description">App logo</string>
    <string name="hint_email_address">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="sign_in_button_text">Sign In</string>
    <string name="welcome_text">Welcome to Tastify!</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="category_image">Category Image</string>
    <string name="dont_have_account_sign_up">Do not have an account? Sign Up</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="recipe_image">Recipe Image</string>

</resources>